changes in polybar added nerd fonts and icons

--- a/polybar/polybar/config.ini
+++ b/polybar/polybar/config.ini
@@ -15,7 +15,6 @@
 ;   The README contains a lot of information
 ;
 ;==========================================================
-
 [colors]
 background = #282A2E
 background-alt = #373B41
@@ -24,50 +23,50 @@ primary = #F0C674
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
-
-
+;==============================================================================================
 [bar/main]
 ; monitor = ${env:MONITORS[0]:HDMI-A-0}
 width = 100%
-height = 15pt
-radius = 5
-; dpi = 96
-
+height = 14pt
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3pt
+line-size = 2pt
 
-border-size = 4pt
+; border-size = 4pt
 border-color = #00000000
 
 padding-left = 0
 padding-right = 1
 
-module-margin = 1
+module-margin = 0
 
 separator = |
 separator-foreground = ${colors.disabled}
 
 font-0 = monospace;2
+font-1 = "Noto Color Emoji:pixelsize=16:style=Regular:scale=10;2"
+font-2 = "Symbols Nerd Font:style=2048-emoji:size=13;2"
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-right = filesystem pulseaudio xkeyboard memory cpu wlan date
+; eth > ip
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; tray-position = right
-
-; wm-restack = generic
-; wm-restack = bspwm
-; wm-restack = i3
-
-; override-redirect = true
-
+;==============================================================================================
+; tray-detached = true
+; tray-offset-x = -5
+; tray-offset-y = 0
+; tray-maxsize = 20
+; tray-scale = 1.0
+tray-position = right
+tray-padding = 5
+;==============================================================================================
 [module/xworkspaces]
 type = internal/xworkspaces
 
@@ -86,87 +85,105 @@ label-urgent-padding = 1
 label-empty = %name%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
-
+;==============================================================================================
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:60:...%
-
+;==============================================================================================
 [module/filesystem]
 type = internal/fs
-interval = 25
+interval = 20
 
-mount-0 = /
+mount-0 = /home/daniellx42/HD500GB
+mount-1 = /
 
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
+label-mounted =  %{F#F0C674}%mountpoint%%{F-} %percentage_used%% |
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
-
+;==============================================================================================
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
+sink = alsa_output.pci-0000_12_00.3.analog-stereo
 
-label-volume = %percentage%%
+use-ui-max = true
 
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
+interval = 5
 
+format-volume = <ramp-volume> <label-volume>
+
+label-muted = 婢
+label-muted-foreground = #666
+; format-muted-foreground = ${colors.primary}
+
+
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 墳
+ramp-volume-3 = 
+format-volume-foreground = ${colors.primary}
+
+click-right = pavucontrol
+;==============================================================================================
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-label-layout = %layout%
+label-layout =  %layout%
 label-layout-foreground = ${colors.primary}
 
 label-indicator-padding = 2
 label-indicator-margin = 1
 label-indicator-foreground = ${colors.background}
 label-indicator-background = ${colors.secondary}
-
+;==============================================================================================
 [module/memory]
 type = internal/memory
-interval = 2
-format-prefix = "RAM "
+interval = 1
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
-
+;==============================================================================================
 [module/cpu]
 type = internal/cpu
-interval = 2
-format-prefix = "CPU "
+
+interval = 1
+
+format-prefix = 
 format-prefix-foreground = ${colors.primary}
+
 label = %percentage:2%%
 
+label-warn = CPU %percentage%%
+warn-percentage = 95
+
+;==============================================================================================
 [network-base]
 type = internal/network
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-
+;==============================================================================================
 [module/wlan]
 inherit = network-base
 interface-type = wireless
 label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
-
+;==============================================================================================
 [module/eth]
 inherit = network-base
 interface-type = wired
 label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
-
+;==============================================================================================
 [module/date]
 type = internal/date
 interval = 1
-
-date = %H:%M
+date =  %H:%M
 date-alt = %Y-%m-%d %H:%M:%S
-
 label = %date%
 label-foreground = ${colors.primary}
-
+;==============================================================================================
 [bar/displaySecondary]
 monitor = ${env:MONITORS[0]:DisplayPort-0}
 inherit = bar/main
@@ -174,9 +191,7 @@ width = 100%
 height = 15pt
 radius = 5
 ; dpi = 80
-
+;==============================================================================================
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
-
-; vim:ft=dosini
